--- a/src/view/profile/EditProfile.css
+++ b/src/view/profile/EditProfile.css
@@ -26,3 +26,18 @@
     color:red;
     font-size:small;
 }
+
+textarea {
+    display: block;
+    padding: .5rem .75rem;
+    width: 100%;
+    font-size: 1rem;
+    line-height: 1.25;
+    color: #55595c;
+    background-color: #fff;
+    background-image: none;
+    background-clip: padding-box;
+    border-top: 0;
+    border-right: 0;
+    border-left: 0;
+}
