style FAQ, set min-height to main-layout, and style all PageTitle

--- a/src/view/MainLayout.css
+++ b/src/view/MainLayout.css
@@ -52,6 +52,7 @@
     margin-top: 1.5%;
     min-width: 500px;
     width: 80%;
+    min-height: 94%;
     margin-left: auto;
     margin-right: auto;
     box-shadow: 0 0 40px 3px black;
