fix sign up page button will move when resize

--- a/src/view/credentials/MainLoginSignup.css
+++ b/src/view/credentials/MainLoginSignup.css
@@ -75,6 +75,14 @@
     font-size: medium;
     background: transparent;
     border: transparent;
+
+
+}
+.wrapper{
+    width:500px;
+    margin:0 auto;
+    padding-top: 100px;
+    position: absolute;
 }
 .button-text:hover{
     color:#3174ad;
@@ -83,6 +91,7 @@
 
 }
 .separator{
+    position:relative;
     margin-top: 0;
     margin-bottom: 5px;
 }
@@ -162,6 +171,7 @@
     font-size:large;
     text-align:center;
     animation:  bounce 2s;
+    background-color: grey;
 }
 .buttonPadding{
     margin-top: 30px;
