--- a/src/view/credentials/MainLoginSignup.css
+++ b/src/view/credentials/MainLoginSignup.css
@@ -65,6 +65,7 @@
 .logo{
     font-family: "Harlow Solid Italic", sans-serif;
     font-size: 500%; /*orignal is 400%*/
+    animation: swing 2s;
 }
 
 
@@ -166,6 +167,28 @@
     }
 }
 
+/* make logo swaing */
+@keyframes swing {
+    20% {
+        transform: rotate3d(0, 0, 1, 15deg);
+    }
+
+    40% {
+        transform: rotate3d(0, 0, 1, -10deg);
+    }
+
+    60% {
+        transform: rotate3d(0, 0, 1, 5deg);
+    }
+
+    80% {
+        transform: rotate3d(0, 0, 1, -5deg);
+    }
+
+    to {
+        transform: rotate3d(0, 0, 1, 0deg);
+    }
+}
 .buttonStyle:hover{
     font-color:lightblue;
     font-size:large;
