speedin effect for input field

--- a/src/view/credentials/MainLoginSignup.css
+++ b/src/view/credentials/MainLoginSignup.css
@@ -167,7 +167,7 @@
     }
 }
 
-/* make logo swaing */
+/* make logo swing */
 @keyframes swing {
     20% {
         transform: rotate3d(0, 0, 1, 15deg);
@@ -189,6 +189,8 @@
         transform: rotate3d(0, 0, 1, 0deg);
     }
 }
+/* end */
+
 .buttonStyle:hover{
     font-color:lightblue;
     font-size:large;
