--- a/src/view/credentials/Login.css
+++ b/src/view/credentials/Login.css
@@ -64,4 +64,26 @@
     background: transparent;
     border: 0;
     cursor: pointer;
+    animation: jackInTheBox2 2s;
+}
+/*jackin the box */
+@keyframes jackInTheBox2 {
+    from {
+        opacity: 0;
+        transform: scale(0.1) rotate(-30deg);
+        transform-origin: center bottom;
+    }
+
+    50% {
+        transform: rotate(-10deg);
+    }
+
+    70% {
+        transform: rotate(3deg);
+    }
+
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
