--- a/src/view/credentials/MainLoginSignup.css
+++ b/src/view/credentials/MainLoginSignup.css
@@ -76,7 +76,7 @@
     font-size: medium;
     background: transparent;
     border: transparent;
-
+    animation: jackInTheBox 2s;
 
 }
 .wrapper{
@@ -205,4 +205,25 @@
     font-size: small;
     color:grey;
 
+}
+/*jackin the box */
+@keyframes jackInTheBox {
+  from {
+    opacity: 0;
+    transform: scale(0.1) rotate(30deg);
+    transform-origin: center bottom;
+  }
+
+  50% {
+    transform: rotate(-10deg);
+  }
+
+  70% {
+    transform: rotate(3deg);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
