add hover color to nav bar button, underline for schdule button

--- a/src/view/MainLayout.css
+++ b/src/view/MainLayout.css
@@ -110,6 +110,8 @@
 .button-nav-bar:hover {
     animation: bounce 2s;
     font-size: medium;
+    background: linear-gradient(lightgrey, darkgrey);
+    color:white;
 }
 
 .logout-button {
