--- a/src/api/ReactBigCalendar.css
+++ b/src/api/ReactBigCalendar.css
@@ -9,7 +9,16 @@
 
 }
 
-
+.dialogue-box {
+    background: #fff;
+    border: 1px solid #eee;
+    padding: 20px;
+    border-radius: 5px;
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.25);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.25);
+    box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.25);
+    position: relative;
+}
 
 .schedule-button-container button{
     font-size: medium;
