--- a/src/api/ReactBigCalendar.css
+++ b/src/api/ReactBigCalendar.css
@@ -6,18 +6,23 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2em;
     color: #555;
-
+    z-index: 1;
 }
 
 .dialogue-box {
-    background: #fff;
+    background: #FFFFFF;
     border: 1px solid #eee;
     padding: 20px;
     border-radius: 5px;
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.25);
-    -moz-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.25);
-    box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.25);
-    position: relative;
+    -webkit-box-shadow: 0px 0px 0px 0px rgba(50, 50, 50, 0.25);
+    -moz-box-shadow: 0px 0px 0px 0px rgba(50, 50, 50, 0.25);
+    box-shadow: 0px 0px 0px 0px rgba(50, 50, 50, 0.25);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    flex: 1;
+    z-index : 10;
 }
 
 .schedule-button-container button{
