change drop course style

--- a/src/view/credentials/MainLoginSignup.css
+++ b/src/view/credentials/MainLoginSignup.css
@@ -65,7 +65,8 @@
 .logo{
     font-family: "Harlow Solid Italic", sans-serif;
     font-size: 500%; /*orignal is 400%*/
-    animation: swing 2s;
+    stroke-dasharray: 100;
+    animation: dash 5s linear;
 }
 
 
@@ -76,8 +77,11 @@
     font-size: medium;
     background: transparent;
     border: transparent;
-    animation: jackInTheBox 2s;
 
+
+}
+.button-text:nth-child(0){
+    animation: dash 5s linear alternate infinite;
 }
 .wrapper{
     width:500px;
@@ -226,4 +230,16 @@
     opacity: 1;
     transform: scale(1);
   }
+}
+
+
+@keyframes dash {
+    from {
+        stroke-dasharray: 0 1000; /* zero-length stroke,
+                                 1000-length gap */
+    }
+    to {
+        stroke-dasharray: 1000 0;/* 1000-length stroke,
+                                 zero-length gap */
+    }
 }
