--- a/src/view/MainLayout.css
+++ b/src/view/MainLayout.css
@@ -45,7 +45,7 @@
     float: top;
     height: calc(100% - 48px);
     width: 100%;
-    overflow-y: auto;
+    overflow-y: scroll;
 }
 
 .middle-panel {
@@ -57,6 +57,8 @@
     margin-right: auto;
     box-shadow: 0 0 40px 3px black;
     background-color: white;
+    overflow-y: scroll;
+
 }
 
 .above-middle-panel {
