--- a/src/api/ReactBigCalendar.css
+++ b/src/api/ReactBigCalendar.css
@@ -9,7 +9,7 @@
     z-index: 1;
 }
 
-.dialogue-box {
+.ui-dialog {
     background: #FFFFFF;
     border: 1px solid #eee;
     padding: 20px;
@@ -94,4 +94,7 @@
     35% {
         transform: scale3D(0, 0, 1);
     }
+}
+.ui-dialog{
+    background-color: white;
 }
