change position to position: inherit;

--- a/src/view/credentials/MainLoginSignup.css
+++ b/src/view/credentials/MainLoginSignup.css
@@ -87,7 +87,7 @@
     width:500px;
     margin:0 auto;
     padding-top: 100px;
-    position: absolute;
+    position: inherit;
 }
 .button-text:hover{
     color:#3174ad;
