--- a/src/view/profile/UserProfile.css
+++ b/src/view/profile/UserProfile.css
@@ -58,3 +58,13 @@
     margin-left: 40px;
 
 }
+
+.td4 {
+    width: 40px;
+    height: 40px;
+    overflow: hidden;
+    align-items: right;
+    margin-left: 140px;
+    margin-right: auto;
+
+}
