--- a/src/view/social/RecommendedFriends.css
+++ b/src/view/social/RecommendedFriends.css
@@ -33,3 +33,14 @@
 .recommended-friend-table td{
     border-bottom: solid 1px lightgrey;
 }
+
+.rec-friend-button{
+    font-size: small;
+    background: transparent;
+    border-radius: 20px;
+    border:solid 1px lightgrey;
+    color: #2f5597;
+    padding: 5px;
+    cursor: pointer;
+    margin: 5px;
+}
