--- a/src/view/social/UserInbox.css
+++ b/src/view/social/UserInbox.css
@@ -26,13 +26,14 @@
 
 .inbox_entry_button {
     float: right;
-    border: transparent;
-    background: transparent;
-    color: #2f5597;
     font-size: small;
-    margin-top: 10px;
-    margin-right: 5px;
+    background: transparent;
+    border-radius: 20px;
+    border:solid 1px lightgrey;
+    color: #2f5597;
+    padding: 5px;
     cursor: pointer;
+    margin: 5px;
 }
 
 .goto_rec_friend_button{
