--- a/src/view/schedule/AddEvent.css
+++ b/src/view/schedule/AddEvent.css
@@ -1,3 +1,56 @@
+.ui-dialog {
+    border: 1px solid #eee;
+    padding: 20px;
+    border-radius: 5px;
+    -webkit-box-shadow: 0px 0px 0px 0px rgba(50, 50, 50, 0.25);
+    -moz-box-shadow: 0px 0px 0px 0px rgba(50, 50, 50, 0.25);
+    box-shadow: 0px 0px 0px 0px rgba(50, 50, 50, 0.25);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    flex: 1;
+    z-index : 10;
+    background-color: #f4fef4;
+}
+
+.diaButton{
+    margin-top: 20px;
+    font-size: medium;
+    background: transparent;
+    border:none;
+    color: #2f5597;
+    padding: 10px;
+    cursor: pointer;
+}
+.diaButton:hover{
+    text-decoration: underline;
+
+}
+
+.ui-dialog-overlay {
+    background: #aaa;
+    opacity: .5;
+    filter: Alpha(Opacity=50);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+}
+
+.error-message{
+    font-family: "Calibri Light", serif;
+    color: red;
+    font-size: small;
+    margin-bottom: 3px;
+    min-height:12px;
+    max-width:70%;
+
+}
+
+
 .alignLabel{
     text-align: left;
     display: inline-block;
