deleted unncessary .css components

--- a/src/view/schedule/AddEvent.css
+++ b/src/view/schedule/AddEvent.css
@@ -23,6 +23,7 @@
     padding: 10px;
     cursor: pointer;
 }
+
 .diaButton:hover{
     text-decoration: underline;
 
@@ -43,11 +44,10 @@
 .error-message{
     font-family: "Calibri Light", serif;
     color: red;
-    font-size: small;
+    font-size: medium;
     margin-bottom: 3px;
     min-height:12px;
     max-width:70%;
-
 }
 
 
@@ -55,8 +55,8 @@
     text-align: left;
     display: inline-block;
     width: 140px;
-
 }
+
 .addEventInputField{
     width:60%;
     font-family: "Biko", sans-serif;
@@ -65,404 +65,9 @@
     background-color: transparent;
     border-bottom: solid 1px grey;
     color: lightgrey;
-
-}
-.flowercontainer {
-    height: 100px;
-    width: 100px;
-    position: absolute;
-    top: 250px;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-.flowercontainer2{
-    height: 10px;
-    width: 10px;
-    position: absolute;
-    top: 20px;
-    bottom: 0;
-    left:100px;
-    right: 0;
-    margin: auto;
-
-}
-.droplet {
-     border-radius: 1px 90%;
-     border-style: solid;
-     border-width: 1px;
-     border-color: grey;
-     height: 80px;
-     margin: auto;
-     width: 80px;
-     position: absolute;
-     top: 50px;
-     left: 50px;
-     /* top: 50%;
-       right: 50%;*/
-     transform-origin: left top;
-     opacity: 0;
- }
-.droplet2 {
-    border-radius: 1px 90%;
-    border-style: solid;
-    border-width: 1px;
-    border-color: grey;
-    height: 20px;
-    margin: auto;
-    width: 20px;
-    position: absolute;
-    top: 50px;
-    left: 50px;
-    /* top: 50%;
-      right: 50%;*/
-    transform-origin: left top;
-    opacity: 0;
-}
-#no1 {
-    background: transparent;
-    animation: spin 5s ease-out infinite;
-    animation-fill-mode: forwards;
-    animation-delay: 0s;
 }
 
-#no2 {
-    background: transparent;
-    animation: spin2 5s ease-out infinite;
-    animation-fill-mode: forwards;
-    animation-delay: 0.05s;
-}
-
-#no3 {
-    background: transparent;
-    animation: spin3 5s ease-out infinite;
-    animation-fill-mode: forwards;
-    animation-delay: 0.1s;
-}
-
-#no4 {
-    background: transparent;
-    animation: spin4 5s ease-out infinite;
-    animation-fill-mode: forwards;
-    animation-delay: 0.15s;
-}
-
-#no5 {
-    background: transparent;
-    animation: spin5 5s ease-out infinite;
-    animation-fill-mode: forwards;
-    animation-delay: 0.2s;
-}
-
-#no6 {
-    background: transparent;
-    animation: spin6 5s ease-out infinite;
-    animation-fill-mode: forwards;
-    animation-delay: 0.25s;
-}
-
-#no7 {
-    background: transparent;
-    animation: spin7 5s ease-out infinite;
-    animation-fill-mode: forwards;
-    animation-delay: 0.30s;
-}
-
-#no8 {
-    background: transparent;
-    animation: spin8 5s ease-out infinite;
-    animation-fill-mode: forwards;
-    animation-delay: 0.35s;
-}
-
-#no9 {
-    background: transparent;
-    animation: spin9 5s ease-out infinite;
-    animation-fill-mode: forwards;
-    animation-delay: 0.40s;
-}
-
-#no10 {
-    background: transparent;
-    animation: spin10 5s ease-out infinite;
-    animation-fill-mode: forwards;
-    animation-delay: 0.45s;
-}
-
-
-@keyframes spin {
-    0% {
-        opacity: 0;
-        -webkit-transform: rotate(0deg) scale(0.01);
-        transform: rotate(0deg) scale(0.01);
-    }
-    20% {
-        opacity: 100;
-        -webkit-transform: rotate(324deg) scale(1);
-        transform: rotate(324deg) scale(1);
-    }
-    60% {
-        opacity: 100;
-        -webkit-transform: rotate(324deg) scale(1);
-        transform: rotate(324deg) scale(1);
-    }
-    80% {
-        opacity: 0;
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-    100% {
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-}
-
-@keyframes spin2 {
-    0% {
-        opacity: 0;
-        -webkit-transform: rotate(0deg) scale(0.01);
-        transform: rotate(0deg) scale(0.01);
-    }
-    20% {
-        opacity: 100;
-        -webkit-transform: rotate(288deg) scale(1);
-        transform: rotate(288deg) scale(1);
-    }
-    60% {
-        opacity: 100;
-        -webkit-transform: rotate(288deg) scale(1);
-        transform: rotate(288deg) scale(1);
-    }
-    80% {
-        opacity: 0;
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-    100% {
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-}
-
-@keyframes spin3 {
-    0% {
-        opacity: 0;
-        -webkit-transform: rotate(0deg) scale(0.01);
-        transform: rotate(0deg) scale(0.01);
-    }
-    20% {
-        opacity: 100;
-        -webkit-transform: rotate(252deg) scale(1);
-        transform: rotate(252deg) scale(1);
-    }
-    60% {
-        opacity: 100;
-        -webkit-transform: rotate(252deg) scale(1);
-        transform: rotate(252deg) scale(1);
-    }
-    80% {
-        opacity: 0;
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-    100% {
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-}
-
-@keyframes spin4 {
-    0% {
-        opacity: 0;
-        -webkit-transform: rotate(0deg) scale(0.01);
-        transform: rotate(0deg) scale(0.01);
-    }
-    20% {
-        opacity: 100;
-        -webkit-transform: rotate(2160deg) scale(1);
-        transform: rotate(216deg) scale(1);
-    }
-    60% {
-        opacity: 100;
-        -webkit-transform: rotate(216deg) scale(1);
-        transform: rotate(216deg) scale(1);
-    }
-    80% {
-        opacity: 0;
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-    100% {
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-}
-
-@keyframes spin5 {
-    0% {
-        opacity: 0;
-        -webkit-transform: rotate(0deg) scale(0.01);
-        transform: rotate(0deg) scale(0.01);
-    }
-    20% {
-        opacity: 100;
-        -webkit-transform: rotate(180deg) scale(1);
-        transform: rotate(180deg) scale(1);
-    }
-    60% {
-        opacity: 100;
-        -webkit-transform: rotate(180deg) scale(1);
-        transform: rotate(180deg) scale(1);
-    }
-    80% {
-        opacity: 0;
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-    100% {
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-}
-
-@keyframes spin6 {
-    0% {
-        opacity: 0;
-        -webkit-transform: rotate(0deg) scale(0.01);
-        transform: rotate(0deg) scale(0.01);
-    }
-    20% {
-        opacity: 100;
-        -webkit-transform: rotate(144deg) scale(1);
-        transform: rotate(144deg) scale(1);
-    }
-    60% {
-        opacity: 100;
-        -webkit-transform: rotate(144deg) scale(1);
-        transform: rotate(144deg) scale(1);
-    }
-    80% {
-        opacity: 0;
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-    100% {
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-}
-
-@keyframes spin7 {
-    0% {
-        opacity: 0;
-        -webkit-transform: rotate(0deg) scale(0.01);
-        transform: rotate(0deg) scale(0.01);
-    }
-    20% {
-        opacity: 100;
-        -webkit-transform: rotate(108deg) scale(1);
-        transform: rotate(108deg) scale(1);
-    }
-    60% {
-        opacity: 100;
-        -webkit-transform: rotate(108deg) scale(1);
-        transform: rotate(108deg) scale(1);
-    }
-    80% {
-        opacity: 0;
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-    100% {
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-}
-
-@keyframes spin8 {
-    0% {
-        opacity: 0;
-        -webkit-transform: rotate(0deg) scale(0.01);
-        transform: rotate(0deg) scale(0.01);
-    }
-    20% {
-        opacity: 100;
-        -webkit-transform: rotate(72deg) scale(1);
-        transform: rotate(72deg) scale(1);
-    }
-    60% {
-        opacity: 100;
-        -webkit-transform: rotate(72deg) scale(1);
-        transform: rotate(72deg) scale(1);
-    }
-    80% {
-        opacity: 0;
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-    100% {
-    ;
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-}
-
-@keyframes spin9 {
-    0% {
-        opacity: 0;
-        -webkit-transform: rotate(0deg) scale(0.01);
-        transform: rotate(0deg) scale(0.01);
-    }
-    20% {
-        opacity: 100;
-        -webkit-transform: rotate(36deg) scale(1);
-        transform: rotate(36deg) scale(1);
-    }
-    60% {
-        opacity: 100;
-        -webkit-transform: rotate(36deg) scale(1);
-        transform: rotate(36deg) scale(1);
-    }
-    80% {
-        opacity: 0;
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-    100% {
-    ;
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-}
-
-@keyframes spin10 {
-    0% {
-        opacity: 0;
-        -webkit-transform: rotate(0deg) scale(0.01);
-        transform: rotate(0deg) scale(0.01);
-    }
-    20% {
-        opacity: 100;
-        -webkit-transform: rotate(0deg) scale(1);
-        transform: rotate(0deg) scale(1);
-    }
-    60% {
-        opacity: 100;
-        -webkit-transform: rotate(0deg) scale(1);
-        transform: rotate(0deg) scale(1);
-    }
-    80% {
-        opacity: 0;
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-    100% {
-    ;
-        -webkit-transform: rotate(720deg) scale(0.01);
-        transform: rotate(720deg) scale(0.01);
-    }
-}
+/*
 .eventButton{
     margin-top: 20px;
     font-size: medium;
@@ -476,3 +81,4 @@
     background: #2f5597;
     color:white;
 }
+*/
