--- a/src/api/ReactBigCalendar.css
+++ b/src/api/ReactBigCalendar.css
@@ -1,10 +1,14 @@
-
+@import url('https://fonts.googleapis.com/css?family=Montserrat+Alternates');
+@font-face {
+    font-family: 'Montserrat Alternates', sans-serif;
+    src: url('https://fonts.googleapis.com/css?family=Montserrat+Alternates')
+}
 .instruction-calendar {
     margin: 0;
     padding: 0;
     background: #FFFFFF;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.2em;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-size: 1em;
     color: #555;
     z-index: 1;
 }
@@ -105,7 +109,7 @@
 }
 .addEventInputField{
     width:60%;
-    font-family: "Biko", sans-serif;
+    font-family: 'Audiowide', cursive;
     font-size: medium;
     border:none;
     background-color: transparent;
@@ -137,4 +141,7 @@
     width: 100%;
     height: 100%;
     z-index: 5;
+}
+button{
+    font-family: 'Montserrat Alternates', sans-serif;
 }
