--- a/src/view/schedule/UserSchedule.css
+++ b/src/view/schedule/UserSchedule.css
@@ -1,12 +1,19 @@
+@import url('https://fonts.googleapis.com/css?family=Audiowide');
+@font-face {
+    font-family: 'Audiowide', cursive;
+    src: url('https://fonts.googleapis.com/css?family=Audiowide')
+}
 .schedule-button-container button{
     font-size: small;
+    font-family: 'Audiowide', cursive;
     background: transparent;
-    border-radius: 20px;
-    border:solid 1px lightgrey;
     color: #2f5597;
     padding: 5px;
     cursor: pointer;
     margin: 5px;
+}
+.buttonHover{
+    font-family: 'Audiowide', cursive;
 }
 
 .buttonHover:hover{
@@ -14,5 +21,5 @@
 }
 #calendar-helper-container{
     width: 90%;
-    font-size: x-small;
+    font-size: small;
 }
