--- a/src/view/social/UserFriends.css
+++ b/src/view/social/UserFriends.css
@@ -5,7 +5,7 @@
     overflow: hidden;
     align-items: center;
     border-radius: 50%;
-    border: solid 1px #ebebeb;
+    border: solid 3px #ebebeb;
     margin-left: 10px;
     margin-right: 20px;
 }
@@ -31,18 +31,16 @@
     color: #2f5597;
     font-size: small;
     text-align: center;
-    display: block;
     cursor: pointer;
 }
 
 .button_red {
     font-size: small;
     background: transparent;
-    border-radius: 20px;
-    border:solid 1px lightgrey;
     color: #2f5597;
     padding: 5px;
     cursor: pointer;
+    border:transparent;
     margin: 5px;
 }
 .button_red:hover{
