Refactored name of file RedirectNoEmailVerification.css + took down alerts

--- a/src/view/credentials/SignUp.css
+++ b/src/view/credentials/SignUp.css
@@ -8,6 +8,15 @@
 
 }
 
+.email-message{
+    font-family: "Calibri Light", serif;
+    color: green;
+    font-size: small;
+    margin-bottom: 3px;
+    min-height:12px;
+    max-width:70%;
+}
+
 .email-password-container{
     width:100%;
     animation: lightSpeedIn 2s;
