--- a/src/view/schedule/AddCourse.css
+++ b/src/view/schedule/AddCourse.css
@@ -47,3 +47,11 @@
     padding: 10px;
     border-bottom: solid 1px lightgrey;
 }
+.success-message{
+    font-family: "Calibri Light", serif;
+    color: green;
+    font-size: small;
+    margin-bottom: 3px;
+    min-height:12px;
+    max-width:70%;
+}
