--- a/src/view/schedule/RemoveEvent.css
+++ b/src/view/schedule/RemoveEvent.css
@@ -27,3 +27,11 @@
 .removerButton:hover{
     text-decoration: underline;
 }
+.success-message{
+    font-family: "Calibri Light", serif;
+    color: green;
+    font-size: small;
+    margin-bottom: 3px;
+    min-height:12px;
+    max-width:70%;
+}
