--- a/src/view/schedule/DropCourse.css
+++ b/src/view/schedule/DropCourse.css
@@ -27,3 +27,11 @@ td1, .th1 { border: 2px solid #CCC; height: 40px; } /* Make cells a bit taller *
 .dropbutton:hover{
     text-decoration: underline;
 }
+.success-message{
+    font-family: "Calibri Light", serif;
+    color: green;
+    font-size: small;
+    margin-bottom: 3px;
+    min-height:12px;
+    max-width:70%;
+}
