--- a/src/view/profile/EditProfile.css
+++ b/src/view/profile/EditProfile.css
@@ -1,14 +1,17 @@
 @import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css");
-.input1{
-     width: 200px;
-     border: none;
-     height: 20px;
+
+.input1 {
+    width: 200px;
+    border: none;
+    height: 20px;
     font-size: medium;
-     margin-left: 20px;
-     background-color: transparent;
+    margin-left: 20px;
+    background-color: transparent;
+    border-bottom: solid 1px lightgrey;
+
 }
 
-.edit-profile-table tr{
+.edit-profile-table tr {
     font-size: medium;
 }
 
@@ -21,18 +24,19 @@
     padding-top: 20px;
 
 }
-.edit-profile-button:hover{
+
+.edit-profile-button:hover {
     text-decoration: underline;
 }
-.edit-profile-subtitle{
+
+.edit-profile-subtitle {
     font-size: small;
     color: dimgrey;
 }
 
-.display-msg
-{
-    color:red;
-    font-size:small;
+.display-msg {
+    color: red;
+    font-size: small;
 }
 
 .textarea1 {
@@ -48,34 +52,35 @@
 }
 
 .table2 {
-     position:relative;
-     color: #333; /* Lighten up font color */
-     font-family: Helvetica, Arial, sans-serif; /* Nicer font */
-     width: 320px;
-     border-collapse: collapse; border-spacing:0;
-     margin: 0 auto
+    position: relative;
+    color: #333; /* Lighten up font color */
+    font-family: Helvetica, Arial, sans-serif; /* Nicer font */
+    width: 320px;
+    border-collapse: collapse;
+    border-spacing: 0;
+    margin: 0 auto
 
- }
+}
 
-
-.td2{
+.td2 {
     height: 40px;
     width: 100px;
     text-align: left; /* Center our text */
-    float:left;
-
+    float: left;
 
 }
-.edit{
+
+.edit {
     margin-top: 20px;
     font-size: medium;
     background: transparent;
-    border:none;
+    border: none;
     color: #2f5597;
     padding: 10px;
     cursor: pointer;
 }
-.edit:hover{
+
+.edit:hover {
     text-decoration: underline;
 
 }
