--- a/src/view/credentials/RedirectNoEmailVerification.css
+++ b/src/view/credentials/RedirectNoEmailVerification.css
@@ -38,3 +38,13 @@ html, body {
 h4{
     color:grey;
 }
+.success-message{
+    font-family: "Calibri Light", serif;
+    color: green;
+    font-size: small;
+    position: relative;
+    text-align: center;
+    margin-bottom: 3px;
+    min-height:12px;
+    max-width:70%;
+}
