--- a/src/view/credentials/RedirectNoEmailVerification.css
+++ b/src/view/credentials/RedirectNoEmailVerification.css
@@ -38,7 +38,7 @@ html, body {
 h4{
     color:grey;
 }
-.success-message{
+.success-message-redirect{
     font-family: "Calibri Light", serif;
     color: green;
     font-size: small;
@@ -46,5 +46,7 @@ h4{
     text-align: center;
     margin-bottom: 3px;
     min-height:12px;
-    max-width:70%;
+    align-items: center;
+    vertical-align: center;
+    justify-content: center;
 }
